--- a/style.css
+++ b/style.css
@@ -13,27 +13,35 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: bisque;
 }
 
 .main {
     display: flex;
-    max-width: 800px;
+    max-width: 600px;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: hsl(0, 0%, 100%);
 }
 
 .main h4, p, h5 {
     color: hsl(228, 12%, 48%);
 }
 
-.image img {
-    max-width: 300px;
+.main .image {
+    width: 50%;
 }
 
 .info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 300px;
+    width: 50%;
     padding: 30px;
+}
+
+.info p {
+    font-size: 14px;
 }
 
 .price {
@@ -49,7 +57,7 @@ body {
 .button {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center ;
     gap: 5px;
 }
 
