--- a/style.css
+++ b/style.css
@@ -1,53 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend+Deca:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend+Deca:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "montserrat", "Fraunces", sans-serif;
-    font-weight: 500;
 }
+
+/* mobile */
 
 body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: bisque;
+    background-color: darkslategray;
+    font-family: "montserrat", "Fraunces", sans-serif;
+    font-weight: 500;
 }
 
 .main {
     display: flex;
-    max-width: 600px;
-    border-radius: 10px;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 300px;
     overflow: hidden;
-    background-color: hsl(0, 0%, 100%);
+    border-radius: 10px;
 }
 
-.main h4, p, h5 {
-    color: hsl(228, 12%, 48%);
+.desktop {
+    display: none;
 }
 
-.main .image {
-    width: 50%;
+.mobile {
+    width: 100%;
+    height: 50%;
 }
 
 .info {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 50%;
-    padding: 30px;
+    justify-content: center;
+    width: 100%;
+    height: 50%;
+    padding: 20px;
+    background-color: hsl(30, 38%, 92%);
+}
+
+.info h1 {
+    margin: 10px 0;
 }
 
 .info p {
     font-size: 14px;
 }
 
+.info h4, p {
+    color: hsl(228, 12%, 48%);
+}
+
 .price {
     display: flex;
+    justify-content: flex-start;
     align-items: center;
-    gap: 13px;
+    gap: 20px;
+    margin: 0px 0;
+    font-family: "Fraunces";
 }
 
 .price h1 {
@@ -57,16 +74,16 @@ body {
 .button {
     display: flex;
     justify-content: center;
-    align-items: center ;
-    gap: 5px;
 }
 
 .button button {
-    padding: 15px 60px;
+    display: flex;
     background-color: hsl(158, 36%, 37%);
-    color: aliceblue;
+    color: white;
+    padding: 10px 60px;
     border: none;
-    border-radius: 15px;
+    border-radius: 10px;
+    gap: 10px;
 }
 
 .button button:hover {
@@ -74,7 +91,30 @@ body {
     cursor: pointer;
 }
 
-.button button h3 {
-    display: inline-block;
-    margin-left: 10px;
+/* desktop */
+
+@media (min-width: 768px) {
+
+    .main {
+        flex-direction: row;
+        max-width: 600px;
+    }
+
+    .desktop {
+        display: block;
+        width: 50%;
+        height: 100%;
+    }
+
+    .mobile {
+        display: none;
+    }
+
+    .info {
+        width: 50%;
+        height: auto;
+        justify-content: space-around;
+    }
 }
+
+
